# glitchtip-jira-bridge

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.sh  build_deploy.sh  docker-compose.yml  pr_check.sh  pyproject.toml
.tekton/: glitchtip-jira-bridge-main-pull-request.yaml  glitchtip-jira-bridge-main-push.yaml  glitchtip-jira-bridge-pull-request.yaml  glitchtip-jira-bridge-push.yaml
dashboards/: dashboard.yaml
glitchtip_jira_bridge/: config.py  dependencies.py  main.py  metrics.py  models.py  tasks.py  worker.py
glitchtip_jira_bridge/api/: __init__.py
glitchtip_jira_bridge/api/v1/: __init__.py  alert.py
glitchtip_jira_bridge/backends/: cache.py  db.py  jira.py
localstack/: init-dynamodb.sh  init-sqs.sh
openshift/: template.yaml
tests/: conftest.py  test_models.py  test_tasks.py
tests/api/: test_alert.py  test_auth.py
tests/backends/: test_cache.py  test_db.py  test_jira.py
