[tool.poetry]
name = "glitchtip-jira-bridge"
version = "0.1.0"
description = "The Glitchtip-Jira-Bridge seamlessly processes Glitchtip alerts through webhooks, transforming them into detailed, actionable Jira tickets."
authors = ["Christian Assing <cassing@redhat.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "glitchtip_jira_bridge" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.1"
celery = { extras = ["sqs"], version = "^5.3.4" }
jira = "^3.5.2"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
pycurl = "^7.45.2"
prometheus-fastapi-instrumentator = "^6.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
mypy = "^1.5.1"
rich = "^13.6.0"
httpx = "^0.25.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
types-requests = "^2.32.0.20240602"
boto3-stubs = { extras = ["dynamodb"], version = "^1.34.125" }
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["glitchtip_jira_bridge"]
plugins = "pydantic.mypy"
enable_error_code = "truthy-bool, redundant-expr"
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["celery.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-p no:warnings"

# Coverage configuration
[tool.coverage.run]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 95

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = 'py311'
required-version = "0.4.8" # keep in sync with dev dependencies!
src = ["glitchtip_jira_bridge"]
extend-exclude = [
    ".local", # used by poetry in local venv
    ".cache", # used by poetry in local venv
]
fix = true

[tool.ruff.lint]
preview = true
# defaults are ["E4", "E7", "E9", "F"]
extend-select = [
    # flake8 default rules
    "E1", # preview rule
    "E2", # preview rule
    "W",
    # isort
    "I",
    # pylint
    "PL",
    # pyupgrade
    "UP",
]
ignore = [
    "PLR0904", # Too many public methods
    "PLR0913", # Too many arguments
    "PLR0917", # Too many positional arguments
]
[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["glitchtip_jira_bridge"]
